src/main/resources/Patterns/GatewayOffloading/nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: user
  annotations:
    nginx.ingress.kubernetes.io/limit-req-zone: '$binary_remote_addr zone=mylimit:10m rate=5r/s'
    nginx.ingress.kubernetes.io/limit-req: "5"
    nginx.ingress.kubernetes.io/limit-req-burst: "10"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-cache: "true"
    nginx.ingress.kubernetes.io/proxy-cache-key: "$uri"
    nginx.ingress.kubernetes.io/proxy-cache-path: "/data/nginx/cache levels=1:2 keys_zone=my_cache:10m max_size=1g inactive=60m use_temp_path=off;"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: ${SERVICE_ENDPOINT}
            pathType: Prefix
            backend:
              service:
                name: ${SERVICE_NAME}
                port:
                  number: 8080
